working after refactoring
- decouple the commiting offset and consuming message
- write to cluster.json and update while running
- long polling